# archive

./: README.md
ACM/: .gitignore  CMakeLists.txt  README.md  compare.h  poj2503.cpp  zoj1002二部图.cpp  zoj1002深度优先.cpp  zoj1083.cpp  zoj1217.cpp  zoj1221.cpp  zoj1364.cpp  zoj1383.cpp  zoj1406.cpp  zoj1516.cpp  zoj1610.cpp  zoj1805.cpp  zoj1805错误解法及原因  zoj1942.cpp  zoj2048.cpp  zoj2451.cpp  zoj2770.cpp  zoj2812.cpp  zoj2833.cpp
ACS/: 20182131084林文迪.pptx  README.md  main.py
COV19/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
COV19/.devcontainer/: devcontainer.json  docker-compose.yml
Horn/: README.md  main.py  main2.py
Horn/horn/: __init__.py
MyMiniCC/: .gitignore  20182131084林文迪.docx  MyMiniCC.pro  MyMiniCC_zh_CN.ts  README.md  bnf.cpp  bnf.h  codegenerator.cpp  codegenerator.h  dot.cpp  dot.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.bat  package.txt  parse.cpp  parse.h  parse_template.cpp  parse_template.h  possible_first1.dot  scan.cpp  scan.dot  scan.h  symtab.cpp  symtab.h  syntax_tree.dot  test.tm  textoutputdialog.cpp  textoutputdialog.h  textoutputdialog.ui
MyMiniCC/release/: README.md
ScnuMoodleSpider/: README.md  main.py
eudic-v12.6.2/: README.md
flappy-bird-Qlearning/: README.md  core.js  flappy-bird.html
scnu-jwxt-util/: main.py
