cmake_minimum_required(VERSION 3.16)
project(ACM)

set(CMAKE_CXX_STANDARD 20)

add_executable(poj2503 poj2503.cpp)

add_executable(zoj1002 zoj1002深度优先.cpp)
add_executable(zoj1002_2 zoj1002二部图.cpp)
add_executable(zoj1083 zoj1083.cpp)
add_executable(zoj1217 zoj1217.cpp)
add_executable(zoj1221 zoj1221.cpp)
add_executable(zoj1364 zoj1364.cpp)
add_executable(zoj1383 zoj1383.cpp)
add_executable(zoj1406 zoj1406.cpp)
add_executable(zoj1516 zoj1516.cpp)
add_executable(zoj1610 zoj1610.cpp)
add_executable(zoj1805 zoj1805.cpp)
add_executable(zoj1942 zoj1942.cpp)
add_executable(zoj2048 zoj2048.cpp)
add_executable(zoj2451 zoj2451.cpp)
add_executable(zoj2770 zoj2770.cpp)
add_executable(zoj2812 zoj2812.cpp)
add_executable(zoj2833 zoj2833.cpp)


add_executable(test test.cpp)
